[metadata]
name=MultiLanguageCallGraphAnalyzer
version=1.0.0
author=Tim Jastrzembski
author-email=tjastrzembski@gmx.de
description=This Tool generates a calling graph for Zope application servers
long_description=file: README.md
url=https://github.com/tjastrzembski/MLCTA
license=MIT
[bdist_wheel]
universal = 1

[options.entry_points]
console_scripts =
    generate-calling-graph = MLCTA.main:main